tests/function/no_body.rev
fn f() 123 // error: missing '{' before function body